<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/standard_padding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/standard_padding"
            android:text="@string/msg_share_explanation" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/standard_padding"
            android:scaleType="center"
            android:src="@drawable/share_via_barcode" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/standard_padding" >

            <Button
                android:id="@+id/share_app_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/button_share_app" />

            <Button
                android:id="@+id/share_bookmark_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/button_share_bookmark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/standard_padding" >

            <Button
                android:id="@+id/share_contact_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/button_share_contact" />

            <Button
                android:id="@+id/share_clipboard_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/button_share_clipboard" />
        </LinearLayout>

        <EditText
            android:id="@+id/share_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/msg_share_text"
            android:selectAllOnFocus="true"
            android:singleLine="true" />
    </LinearLayout>

</ScrollView>